test/numeric/num013.compile.err
"num013.curry", line 41.18: Type error in application
even n

Term: n
Inferred type: Nat
Expected type: Int
Types Nat and Int are incompatible
